--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
                     
                     <!-- TO DO: Add the video from the files below using HTML5 -->
 
+                    <video controls width="425">
+                      <source src="video/video.mp4" type="video/mp4">
+                      Your browser doesn't support this video format.
+                    </video>
+
                     <a href="https://www.pexels.com/video/laptop-use-as-controller-for-a-modern-sound-system-3134599/" class="credit">Video by Caleb Oquendo</a>
                 </section>
 
